src/objects/Global_Unit_Of_Measurement__c.object
<CustomObject>
    <fields>
        <fullName>RDS_Description__c</fullName>
        <label>Description</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RDS_Master_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Config</label>
        <referenceTo>Master__c</referenceTo>
        <relationshipLabel>Global Unit of Measurements</relationshipLabel>
        <relationshipName>Global_Unit_of_Measurements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RDS_Unit_of_Measurement_Code__c</fullName>
        <label>Unit of Measurement Code</label>
        <length>3</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Global Unit of Measurement</label>
    <nameField>
        <label>Global Unit of Measurement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Global Unit of Measurements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>